--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
+pip==23.2.1
 scikit-learn==1.2.0
 matplotlib==3.6.2
 plotly_express==0.4.1
 keras==2.11.0
-tensorflow==3.9.2
+tensorflow==2.10.0+nv22.10
